--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Page Image</title>
+    <title>BLACKSPRING</title>
     <style>
+                @import url('https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@400;700&display=swap');
         html, body {
             margin: 0;
             padding: 0;
@@ -15,11 +16,12 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', sans-serif;
         }
         .full-page-image {
             background-image: url('bs.png');
-            background-size: cover;
+            background-size: contain;
+            background-repeat: no-repeat;
             background-position: center;
             width: 50%;
             height: 50%;
