added cors mode

--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
                             'Content-Type': 'application/json',
                         },
                         body: JSON.stringify(formData),
+                        mode: 'cors'
                     })
                     .then(response => response.json())
                     .then(data => {
