--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                         recaptcha_token: token
                     };
 
-                    fetch('https://foknap57cd.execute-api.us-east-1.amazonaws.com/default/blackspring_email', {
+                    fetch('https://hya0zypaub.execute-api.us-east-1.amazonaws.com/default/blackspring_email', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
