--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
+                            'Access-Control-Allow-Origin':'*'
                         },
                         body: JSON.stringify(formData),
                         mode: 'cors'
