--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
                         name: document.getElementById('name').value,
                         email: document.getElementById('email').value,
                         message: document.getElementById('message').value,
+                        company: document.getElementById('company').value,
                         recaptcha_token: token
                     };
 
