--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
                             'Access-Control-Allow-Origin':'*'
                         },
                         body: JSON.stringify(formData),
+                        credentials: 'include',
                         mode: 'cors'
                     })
                     .then(response => response.json())
