--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                             <label for="message">Message</label>
                             <textarea rows="6" id="message" name="message" placeholder="Your Message" required></textarea>
                     
-                            <button type="submit" id="submit" class="button">SCHEDULE NOW</button>
+                            <button type="submit" id="submit" class="button">SEND</button>
                         </form>
                         <div id="status-message"></div>
                     </div>
