changed success message

--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     })
                     .then(response => response.json())
                     .then(data => {
-                        showStatus('Form submitted successfully!', 'success');
+                        showStatus('We have received your request and will respond to you as soon as possible.', 'success');
                         document.getElementById('contact-form').reset();
                     })
                     .catch((error) => {
