changed success message

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Namari Color CSS -->
     <link rel="stylesheet" href="css/namari-color.css">
-
+    <link rel="preload" as="image" href="../images/banner-images/banner-image2.jpg">
     <!--Icon Fonts - Font Awesome Icons-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
@@ -62,7 +62,7 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img src="images/logo.png" id="banner-logo" alt="Landing Page"/>
+                            <img  src="images/logo.png" id="banner-logo" alt="Landing Page"/>
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
