--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img  src="images/logo.png" id="banner-logo" alt="Landing Page"/>
+                            <img  src="images/logo.webp" id="banner-logo" alt="Landing Page"/>
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
-                            <img src="images/logo-2.png" id="navigation-logo" alt="Landing Page"/>
+                            <img loading="lazy" src="images/logo-2.webp" id="navigation-logo" alt="Landing Page"/>
                             <!--End of Navigation Logo-->
 
                         </div>
@@ -306,7 +306,7 @@
                     <!--End Content Right Side-->
 
                     <div class="col-3">
-                        <amp-img src="images/dancer.jpg" alt="Dancer" />
+                        <img loading="lazy" src="images/dancer.webp" alt="Dancer" />
                     </div>
 
                 </div>
@@ -327,7 +327,7 @@
 
                     <!--User Testimonial-->
                     <blockquote class="col-3 testimonial classic">
-                        <amp-img src="images/user-images/user-1.png" alt="User" />
+                        <img loading="lazy" src="images/user-images/user-1.png" alt="User" />
                         <q>Working with Blackspring has been a game-changer for our business. Their team didn't just
                             deliver a product; they became an extension of our own, diving deep into our processes and
                             challenges. The custom ERP system they developed has streamlined our operations beyond our
@@ -339,7 +339,7 @@
 
                     <!--User Testimonial-->
                     <blockquote class="col-3 testimonial classic">
-                        <amp-img src="images/user-images/user-2.png" alt="User" />
+                        <img loading="lazy" src="images/user-images/user-2.png" alt="User" />
                         <q>I've collaborated with numerous software providers over my 20-year career, but BlackSpring
                             stands out for their exceptional partnership approach. They took the time to understand our
                             unique market position and regulatory environment, delivering a compliance management
@@ -351,7 +351,7 @@
 
                     <!--User Testimonial-->
                     <blockquote class="col-3 testimonial classic">
-                        <amp-img src="images/user-images/user-3.png" alt="User" />
+                        <img loading="lazy" src="images/user-images/user-3.png" alt="User" />
                         <q>When we embarked on our digital transformation journey, we needed more than just a software
                             vendor - we needed a strategic partner. BLACKSPRING exceeded our expectations on all fronts.
                             They seamlessly integrated with our team, adopted our workflows, and brought innovative
