changed success message

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Namari Color CSS -->
-    <link rel="stylesheet" href="css/namari-color.css">
-    <link rel="preload" as="image" href="../images/banner-images/banner-image2.jpg">
+    <link rel="stylesheet" href="css/namari-color.css" media="print" onload="this.media='all'">
     <!--Icon Fonts - Font Awesome Icons-->
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
