--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
                     <!--User Testimonial-->
                     <blockquote class="col-3 testimonial classic">
-                        <img loading="lazy" src="images/user-images/user-1.png" alt="User" />
+                        <img loading="lazy" src="images/user-images/user-1.webp" alt="User" />
                         <q>Working with Blackspring has been a game-changer for our business. Their team didn't just
                             deliver a product; they became an extension of our own, diving deep into our processes and
                             challenges. The custom ERP system they developed has streamlined our operations beyond our
@@ -338,7 +338,7 @@
 
                     <!--User Testimonial-->
                     <blockquote class="col-3 testimonial classic">
-                        <img loading="lazy" src="images/user-images/user-2.png" alt="User" />
+                        <img loading="lazy" src="images/user-images/user-2.webp" alt="User" />
                         <q>I've collaborated with numerous software providers over my 20-year career, but BlackSpring
                             stands out for their exceptional partnership approach. They took the time to understand our
                             unique market position and regulatory environment, delivering a compliance management
@@ -350,7 +350,7 @@
 
                     <!--User Testimonial-->
                     <blockquote class="col-3 testimonial classic">
-                        <img loading="lazy" src="images/user-images/user-3.png" alt="User" />
+                        <img loading="lazy" src="images/user-images/user-3.webp" alt="User" />
                         <q>When we embarked on our digital transformation journey, we needed more than just a software
                             vendor - we needed a strategic partner. BLACKSPRING exceeded our expectations on all fronts.
                             They seamlessly integrated with our team, adopted our workflows, and brought innovative
