--- a/index.html
+++ b/index.html
@@ -426,19 +426,19 @@
     </div>
 
     <!-- Include JavaScript resources -->
-    <script src="js/jquery.1.8.3.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/featherlight.min.js"></script>
-    <script src="js/featherlight.gallery.min.js"></script>
-    <script src="js/jquery.enllax.min.js"></script>
-    <script src="js/jquery.scrollUp.min.js"></script>
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/jquery.stickyNavbar.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/images-loaded.min.js"></script>
-    <script src="js/lightbox.min.js"></script>
-    <script src="js/site.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js?render=6LfZ0wIqAAAAAIyu_Wdf-8K0B6jY7y9fYAWmn0yR"></script>
+    <script src="js/jquery.1.8.3.min.js" defer></script>
+    <script src="js/wow.min.js" async></script>  <script src="js/featherlight.min.js" defer></script>
+    <script src="js/featherlight.gallery.min.js" defer></script>
+    <script src="js/jquery.enllax.min.js" defer></script>
+    <script src="js/jquery.scrollUp.min.js" defer></script>
+    <script src="js/jquery.easing.min.js" defer></script>
+    <script src="js/jquery.stickyNavbar.min.js" defer></script>
+    <script src="js/jquery.waypoints.min.js" defer></script>
+    <script src="js/images-loaded.min.js" defer></script>
+    <script src="js/lightbox.min.js" defer></script>
+    <script src="js/site.js" defer></script>
+    <script src="https://www.google.com/recaptcha/api.js?render=6LfZ0wIqAAAAAIyu_Wdf-8K0B6jY7y9fYAWmn0yR" async></script> ```
+
 
     <script>
         document.getElementById('contact-form').addEventListener('submit', function(e) {
