changed success message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Meta Keywords and Description-->
     <meta name="keywords" content="">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Favicon-->
     <link rel="shortcut icon" href="images/favicon.ico" title="Favicon" />
@@ -271,7 +271,7 @@
                         <div class="section-heading">
                             <h3>BELIEVING</h3>
                             <h2 class="section-title">Beyond Code: Our Unwavering Commitment to Your Success</h2>
-                            <p class="section-subtitle">At the core of our approach lies a transformative philosophy:
+                            <p>At the core of our approach lies a transformative philosophy:
                                 we're not just code creators, but architects of enduring alliances. What truly
                                 distinguishes us is our unwavering dedication to deeply comprehending and aligning with
                                 your business vision. While others might simply follow a blueprint, we delve into the
@@ -282,24 +282,25 @@
                                 positioning ourselves as your strategic technology confidants, we ensure that each
                                 algorithm we design and every function we implement directly fuels your ongoing success
                                 and market leadership.</p>
+                                <p>Our integration into your business ecosystem is seamless and comprehensive. We don't operate
+                                    on the periphery as a typical vendor; instead, we become an organic extension of your
+                                    organization. This profound level of integration grants us unique insights into your
+                                    operational nuances, hurdles, and objectives. By fully embedding ourselves in your business
+                                    context, we can anticipate needs, identify latent opportunities, and develop solutions that
+                                    not only address current demands but also lay a robust foundation for future scalability and
+                                    innovation.
+                                </p>
+                                <p>
+                                    Our commitment to integration goes beyond understanding your business - it extends to how we
+                                    work. We adopt your communication tools, align with your project management methodologies,
+                                    and sync with your team's rhythms. This approach eliminates the traditional barriers between
+                                    client and developer, fostering a collaborative environment where ideas flow freely, and
+                                    solutions evolve organically. The result is software that feels less like a product we've
+                                    delivered and more like a solution you've crafted alongside us, perfectly tailored to your
+                                    unique business.
+                                </p>
                         </div>
-                        <p>Our integration into your business ecosystem is seamless and comprehensive. We don't operate
-                            on the periphery as a typical vendor; instead, we become an organic extension of your
-                            organization. This profound level of integration grants us unique insights into your
-                            operational nuances, hurdles, and objectives. By fully embedding ourselves in your business
-                            context, we can anticipate needs, identify latent opportunities, and develop solutions that
-                            not only address current demands but also lay a robust foundation for future scalability and
-                            innovation.
-                        </p>
-                        <p>
-                            Our commitment to integration goes beyond understanding your business - it extends to how we
-                            work. We adopt your communication tools, align with your project management methodologies,
-                            and sync with your team's rhythms. This approach eliminates the traditional barriers between
-                            client and developer, fostering a collaborative environment where ideas flow freely, and
-                            solutions evolve organically. The result is software that feels less like a product we've
-                            delivered and more like a solution you've crafted alongside us, perfectly tailored to your
-                            unique business.
-                        </p>
+                        
 
                     </div>
                     <!--End Content Right Side-->
